--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # ignored directories
 var/
 vendor/
+src/vendor/
+src/frontend/lib/
 
 # ignored files
 test*
@@ -18,3 +20,4 @@ run-tests.php
 #composer
 composer.phar
 composer.lock
+src/composer.json
