--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:7.2-apache
 
+RUN docker-php-ext-install mysqli
+
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get update && \
     apt-get install --quiet apt-utils -y \
@@ -12,7 +14,7 @@ RUN DEBIAN_FRONTEND=noninteractive \
             git -y
 
 COPY bin /var/www/html/var/bin
-COPY composer.json /var/www/html/composer.json
+COPY .htaccess /var/www/html/.htaccess
 
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
     php -r "if (hash_file('sha384', 'composer-setup.php') === 'e5325b19b381bfd88ce90a5ddb7823406b2a38cff6bb704b0acc289a09c8128d4a8ce2bbafcd1fcbdc38666422fe2806') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
