--- a/001-project.conf
+++ b/001-project.conf
@@ -1,20 +1,25 @@
 <VirtualHost *:80>
-  DocumentRoot "/var/www/html/backend"
-  ServerName backend.timetracker.de
+    DocumentRoot "/var/www/html/backend"
+    ServerName backend.timetracker.de
 
-  # Other directives here
+    # Other directives here
+    <Diretory /var/www/html/backend>
+        AllowOverride All
+    </Diretory>
+    CustomLog "/var/www/.logs/backend.timetracker.de-access_log" combined
+    ErrorLog "/var/www/.logs/backend.timetracker.de-error_log"
+    LogLevel warn
 </VirtualHost>
 
 <VirtualHost *:80>
-  DocumentRoot "/var/www/html/frontend"
-  ServerName timetracker.de
+    DocumentRoot "/var/www/html/frontend"
+    ServerName timetracker.de
 
-  # Other directives here
-</VirtualHost>
-
-<VirtualHost *:80>
-  DocumentRoot "/var/www/html/frontend"
-  ServerName virtualhosttest
-
-  # Other directives here
+    # Other directives here
+    <Diretory /var/www/html/frontend>
+        AllowOverride All
+    </Diretory>
+    CustomLog "/var/www/.logs/frontend.timetracker.de-access_log" combined
+    ErrorLog "/var/www/.logs/frontend.timetracker.de-error_log"
+    LogLevel warn
 </VirtualHost>
