--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -9,20 +9,20 @@ RUN DEBIAN_FRONTEND=noninteractive \
             vim -y \
             wget -y \
             zip -y \
-#            npm -y \
+            npm -y \
             nmap -y \
             git -y
 
 COPY 001-project.conf /etc/apache2/sites-available/001-project.conf
 COPY bin /var/www/html/var/bin
 
-#RUN /var/www/html/var/bin/composer_install.sh
+RUN /var/www/html/var/bin/composer_install.sh
 
-RUN nmap localhost || (
+RUN nmap localhost || \
     echo -e "# Docker Added lines\n \
         ServerName localhost\n \
-        ServerName virtualhost\n \
+        ServerName virtualhosttest\n \
         ServerName timetracker.de\n \
-        ServerName backend.timetracker.de\n" \
+        ServerName backend.timetracker.de" \
         >> /etc/apache2/apache2.conf \
-        )
+
