--- a/src/frontend/.htaccess
+++ b/src/frontend/.htaccess
@@ -1,19 +1,17 @@
-allow from all
+Header set Access-Control-Allow-Origin "*"
+Header always set Access-Control-Origin-Methods "POST, PUT, GET, DELETE"
+Header always set Access-Control-Origin-Headers "Content-Type: application/json"
 
 RewriteEngine On
 
-RewriteCond %{SERVER_PORT} !^8080$
-RewriteRule ".?" "-" [S=2]
-
-# if not port 8080 skip rewriting
-    RewriteCond %{REQUEST_URI} ^/frontend/?$
-    RewriteRule ^frontend/?$ /frontpage.html [R=302,S=3,L]
-    # skip next two rules
-    RewriteRule ^$ /frontpage.html [R=302,S=2,L]
+RewriteCond %{SERVER_PORT} !^8080$ [OR]
+RewriteCond %{REQUEST_URI} ^/(.?|frontend/?)$
+RewriteRule ^(.?|frontend/?)$ /frontpage.html [R=302,S=2,L]
 
 
 RewriteCond %{SERVER_PORT} ^8090$
-RewriteRule ".?" backend.timetracker.de:8090/%{REQUEST_URI} [R=302,S=1,L]
+RewriteCond %{HTTP_HOST} ^backend.timetracker.de$
+RewriteRule "(.*)?" backend.timetracker.de:8090/%{REQUEST_URI} [R=302,S=1,L]
 
 RewriteCond %{REQUEST_URI} -d
 RewriteCond %{REQUEST_URI} -f
