--- a/src/frontend/.htaccess
+++ b/src/frontend/.htaccess
@@ -1,6 +1,6 @@
 Header set Access-Control-Allow-Origin "*"
 Header always set Access-Control-Origin-Methods "POST, PUT, GET, DELETE"
-Header always set Access-Control-Origin-Headers "Content-Type: application/json"
+Header always set Access-Control-Origin-Headers "*"
 
 RewriteEngine On
 
