--- a/001-project.conf
+++ b/001-project.conf
@@ -3,9 +3,9 @@
     ServerName backend.timetracker.de
 
     # Other directives here
-    <Diretory /var/www/html/backend>
+    <Directory /var/www/html/backend>
         AllowOverride All
-    </Diretory>
+    </Directory>
     CustomLog "/var/www/.logs/backend.timetracker.de-access_log" combined
     ErrorLog "/var/www/.logs/backend.timetracker.de-error_log"
     LogLevel warn
@@ -16,9 +16,9 @@
     ServerName timetracker.de
 
     # Other directives here
-    <Diretory /var/www/html/frontend>
+    <Directory /var/www/html/frontend>
         AllowOverride All
-    </Diretory>
+    </Directory>
     CustomLog "/var/www/.logs/frontend.timetracker.de-access_log" combined
     ErrorLog "/var/www/.logs/frontend.timetracker.de-error_log"
     LogLevel warn
