--- a/src/backend/composer.json
+++ b/src/backend/composer.json
@@ -3,6 +3,7 @@
   "description": "description",
   "minimum-stability": "stable",
   "license": "proprietary",
+  "version": "0.5.0",
   "authors": [
     {
       "name": "David",
@@ -10,8 +11,15 @@
     }
   ],
   "require": {
-    "php": "7.2.*"
+    "php": "7.2.32",
+    "tecnickcom/tcpdf": "^6.3"
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@github.com:tecnickcom/tc-lib-pdf.git"
+    }
+  ],
   "autoload": {
     "psr-4": {
       "DavidGoraj\\": "src/"
